[package]
name = "flossy"
version = "0.0.1"
authors = ["Eliza Weisman <eliza@buoyant.io>"]
readme = "README.md"
license = "Apache 2.0"
repository = "https://github.com/buoyant/flossy"
description = "a tool for testing standard compliance of HTTP proxies"

[dependencies]
clap = "2.24"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
net2 = "0.2.29"

tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }

httparse = "1.2.3"
